Pending changes in the mainline
===============================

=> Minimum Orthanc version: 1.11.3 <=
=> Recommended SDK version: 1.12.4 <=
=> Minimum SDK version: 1.11.3 <=

* New default permissions to Q&R remote modalities
* Maintenance: Use Orthanc SDK 1.12.4 by default to benefit from more detailed logging.
* Fix default permission for /dicom-web/servers/../stow
* When calling /dicom-web/studies with a resource token when no StudyInstanceUID 
  is specified in the query args, the plugin now adds a filter on StudyInstanceUID=X|Y where
  X & Y are the StudyInstanceUIDs of the resource token.  
  This will only work if the authorization service returns a "resources" field to the /tokens/decode route.  
  This notably prevents OHIF to display errors when requesting 
  prior studies while still preserving the security since only the authorized resources are returned.


2025-04-29 - v 0.9.2
====================

* When calling /dicom-web/studies with a resource token when no StudyInstanceUID 
  is specified in the query args, the plugin now returns an empty list of resources
  instead of returning a 403.  This notably prevents OHIF to display errors when requesting 
  prior studies while still preserving the security since no resources are returned.
* Added support for /dicom-web/studies/../thumbnail.


2025-04-01 - v 0.9.1
====================

* The plugin is now using the HttpClient from the Orthanc core instead of its
  own HttpClient which should enable support for https since the plugin
  is not built with SSL support.
* New default permission to upload to ^/DICOM_WEB_ROOT/studies/([.0-9]+)
  (https://orthanc.uclouvain.be/bugs/show_bug.cgi?id=244)


2025-02-27 - v 0.9.0
====================

* The plugin now filters out all unauthorized labels from the "Labels" fields
  in the responses of these API routes:
  - /tools/find
  - /studies/{id} & similar routes
  - /studies/{id}/series & similar routes
  - /series/{id}/study & similar routes